--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25028228759765625\n"
+     ]
+    }
+   ],
    "source": [
-    "p_3_strikes = None #answer = 0.2502822"
+    "import numpy as np\n",
+    "p_3_strikes = (factorial(10) / (factorial(7)*factorial(3))) * .25**3 * .75**7 #answer = 0.2502822\n",
+    "print(p_3_strikes)"
    ]
   },
   {
@@ -72,12 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def binom_distr(n,p,k):\n",
-    "    None"
+    "def binom_distr(n,p,k): \n",
+    "    binom = (factorial(n)/ (factorial(k)*factorial(n-k))) * p**k * (1-p)**(n-k)\n",
+    "    return binom"
    ]
   },
   {
@@ -89,11 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25028228759765625"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None  "
+    "binom_distr(10,.25,3)"
    ]
   },
   {
@@ -105,12 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "None"
+    "prob = 0\n",
+    "for i in np.arange(5,11):\n",
+    "    prob += binom_distr(10,.25,i)"
    ]
   },
   {
@@ -129,24 +153,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# leave the random seed here \n",
     "np.random.seed(123)\n",
-    "#\n",
-    "#\n",
-    "#\n",
-    "#"
+    "n = 5000\n",
+    "iteration = []\n",
+    "for loop in range(n):\n",
+    "    iteration.append(np.random.binomial(10, .25))\n",
+    "    arr_it = np.array(iteration)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 2 1 ... 2 5 0]\n"
+     ]
+    }
+   ],
    "source": [
+    "value,counts = np.unique(arr_it, return_counts = True)\n",
+    "print(value)\n",
+    "pri\n",
     "# the results should look like this:\n",
     "# [0 1 2 3 4 5 6 7 8]\n",
     "# [ 310  941 1368 1286  707  297   78   11    2]"
@@ -212,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
